changed scrollbar css. scroll fix for mobile devices

--- a/src/components/Chessboard.css
+++ b/src/components/Chessboard.css
@@ -13,3 +13,12 @@
     height: min(80vh, 80vw);
     background-color: #f0d9b5;
 }
+
+@media (max-width: 480px) {
+    #chessboard {
+        width: min(100vh, 100vw);
+        height: min(100vh, 100vw);
+        grid-template-columns: repeat(8, min(12.5vh, 12.5vw));
+        grid-template-rows: repeat(8, min(12.5vh, 12.5vw));
+    }
+  }
